...
          ),
        }}
      />
      <Tabs.Screen
        name="carteirinha"
        options={{
          title: 'Carteirinha',
          tabBarIcon: ({ color, focused }) => (
            <Icon icon={TAB_ICONS.card} color={color} size="lg" weight={focused ? 'fill' : 'regular'} />
          ),
        }}
      />
      <Tabs.Screen
...
          ),
        }}
      />
      <Tabs.Screen
        name="loja"
        options={{
          title: 'Loja',
          tabBarIcon: ({ color, focused }) => (
            <Icon icon={TAB_ICONS.store} color={color} size="lg" weight={focused ? 'fill' : 'regular'} />
          ),
        }}
      />
      <Tabs.Screen
...
